@@ -13,7 +13,7 @@
       <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
       </padding>
-      <TableView fx:id="entityTable" prefHeight="200.0">
+      <TableView fx:id="entityTable" prefHeight="120.0">
         <columns>
           <TableColumn fx:id="nameCol" prefWidth="253.0" text="Name" />
           <TableColumn fx:id="kindCol" prefWidth="282.0" text="Kind" />
